🛎👋 Checkpoint ./contact.html:33818363/3903 ./style.css:33818363/336

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-.nav-links{
-  margin:0px;
-  background:red;
+.info{
+  margin: 30px;
+  border: 20px;
+  padding: 40px;
+  font-size: 40px;
+  text-align: center;
+}
+
+h1.contact-page{
+  font-size: 60px;
+  text-align: center;
 }
