🐝🎎 Checkpoint ./contact.html:33818363/1193 ./.glitch-assets:33818363/525 ./style.css:33818363/222

--- a/style.css
+++ b/style.css
@@ -10,3 +10,13 @@ h1.contact-page{
   font-size: 60px;
   text-align: center;
 }
+
+img.contact-page{
+  align:
+  height: 200px;
+  width: 200px;
+  margin:50px;
+  padding:50px;
+  border:40px;
+  
+}
