--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+/* index  */
+
+
+
+
+
+/* project */
+
+
+
+/* about me */
+
+
+
+
+
+
+
+
+
+/* contact */
+
 .info{
   margin: 30px;
   border: 20px;
@@ -12,11 +34,9 @@ h1.contact-page{
 }
 
 img.contact-page{
-  align:
-  height: 200px;
-  width: 200px;
-  margin:50px;
-  padding:50px;
-  border:40px;
-  
+  height: 250px;
+  width: 250px;
+  margin:60px;
+  padding:120px;
+  border:20px;
 }
