👴💸 Checkpoint ./style.css:33818363/388 ./index.html:33818363/461 ./.glitch-assets:33818363/467

--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
 /* index  */
 
+nav h1{
+  float: right;
+}
+nav{
+  float:left;
+}
+
+nav ul{
+  padding: 0px;
+  list-
+}
+ 
+
+nav li{
+  display: inline-block;
+}
+  
 
 
 
