--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 /* index  */
 
+header{
+  header::after { 
+    content: ''; 
+    display: table; 
+    clear: both;
+}
 nav h1{
   float: right;
 }
@@ -9,7 +15,8 @@ nav{
 
 nav ul{
   padding: 0px;
-  list-
+  margin: 0px;
+  list-style: None;
 }
  
 
