--- a/style.css
+++ b/style.css
@@ -25,8 +25,18 @@ nav ul {
 nav li {
   padding: 10px;
   margin:10px;
-  font-size: 30px;
   display: inline-block;
+}
+
+nav a{
+    text-decoration:none;
+  text-transform:Uppercase;
+  font-size: 30px;
+  color: darkblue;
+}
+
+nav a:hover{
+  color: white;
 }
 
 /* project */
