--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* index  */
 body{
-  background-color: black;
+  background-color: steelblue;
 }
 header {
   background: DodgerBlue;
@@ -62,15 +62,17 @@ h1.contact-page {
 }
 
 img.contact-page {
-  height: 250px;
-  width: 250px;
-  margin: 10px;
-  padding: 10px;
-  border: 10px;
+  height: 10%;
+  width: 10%;
+  margin: 50px;
+  padding: 150px;
+  padding-right:20px;
+  display:center;
+
 }
 /* message */
 label.message{
-  padding:20px;
-  margin:30px;
+  padding:50px;
+  margin:60px;
   border:20px;
 }
