--- a/style.css
+++ b/style.css
@@ -50,7 +50,9 @@ h2{
 }
 
 /* contact */
-
+h1 contact-page{
+  font-size: 50px;
+}
 .info {
   margin: 30px;
   border: 20px;
@@ -73,8 +75,8 @@ h1.contact-page {
 img.contact-page {
   height: 10%;
   width: 10%;
-padding-right:200px;
-padding-left:200px;
+padding-right:50px;
+padding-left:300px;
 padding-top:40px;
 padding-bottom:40px;
   display:center;
