👵⚾️ Checkpoint ./style.css:33818363/331 ./contact.html:33818363/27

--- a/style.css
+++ b/style.css
@@ -66,8 +66,12 @@ h2{
 .info:hover{
   color:white;
 }
-
+body.contact-page{
+  font-family: 'Concert One', cursive;
+font-family: 'Patrick Hand', cursive
+}
 h1.contact-page {
+
   font-size: 70px;
   text-align: center;
 }
