--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* index  */
-body{
+body {
   background-color: DarkTurquoise;
 }
 header {
@@ -12,41 +12,40 @@ header::after {
   clear: both;
 }
 
-
-img.nav{
-  padding-top:20px;
-  padding-left:15px;
-  height:65px;
+img.nav {
+  padding-top: 20px;
+  padding-left: 15px;
+  height: 65px;
   float: left;
 }
 
 nav ul {
-  float:right;
+  float: right;
   list-style: None;
 }
 
 nav li {
   padding: 10px;
-  margin:10px;
+  margin: 10px;
   display: inline-block;
 }
 
-nav a{
-    text-decoration:none;
-  text-transform:Uppercase;
+nav a {
+  text-decoration: none;
+  text-transform: Uppercase;
   font-size: 30px;
   color: darkblue;
 }
 
-nav a:hover{
+nav a:hover {
   color: white;
 }
 
 /* project */
 
 /* about me */
-h2{
-  text-align:center;
+h2 {
+  text-align: center;
 }
 
 /* contact */
@@ -55,41 +54,38 @@ h2{
   margin: 30px;
   border: 20px;
   padding: 30px;
-  padding-right:125px;
-  padding-left:125px;
+  padding-right: 125px;
+  padding-left: 125px;
   font-size: 50px;
   text-align: center;
-  text-decoration:none;
-  color:darkblue;
+  text-decoration: none;
+  color: darkblue;
 }
 
-.info:hover{
-  color:white;
+.info:hover {
+  color: white;
 }
-body.contact-page{
-  font-family: 'Concert One', cursive;
-font-family: 'Patrick Hand', cursive
+main.contactpage {
+font-family: 'Abel',sans-serif;
 }
 h1.contact-page {
-
-  font-size: 70px;
+  font-size: 80px;
   text-align: center;
 }
 
 img.contact-page {
   height: 10%;
   width: 10%;
-padding-right:50px;
-padding-left:300px;
-padding-top:40px;
-padding-bottom:40px;
-  display:center;
-
+  padding-right: 50px;
+  padding-left: 300px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  display: center;
 }
 
 /* message */
-label.message{
-  padding:50px;
-  margin:60px;
-  border:20px;
+label.message {
+  padding: 50px;
+  margin: 60px;
+  border: 20px;
 }
