--- a/style.css
+++ b/style.css
@@ -49,14 +49,16 @@ h2 {
 }
 
 /* contact */
-
+a.info{
+    border: 2px;
+  border:double;
+}
 .info {
   margin: 30px;
-  border: 20px;
   padding: 30px;
-  padding-right: 125px;
-  padding-left: 125px;
-  font-size: 50px;
+  padding-right: 120px;
+  padding-left: 70px;
+  font-size: 60px;
   text-align: center;
   text-decoration: none;
   color: darkblue;
@@ -69,7 +71,7 @@ main.contactpage {
 font-family: 'Abel',sans-serif;
 }
 h1.contact-page {
-  font-size: 80px;
+  font-size: 85px;
   text-align: center;
 }
 
