🕰⚽️ Checkpoint ./aboutme.html:33818363/5473 ./style.css:33818363/110

--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ nav a:hover {
 h2 {
   text-align: center;
 }
+p.p1{
+  display:inline;
+  vertical-alignment: middle;
+}
 
 /* contact */
 a.info{
