👻🐁 Checkpoint ./aboutme.html:33818363/2042 ./style.css:33818363/306 ./.glitch-assets:33818363/482

--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ nav a:hover {
 
 /* about me */
 
-div.p1{
+.box1{
+  position:absolute;
   display:flex;
-  vertical-alignment: middle;
 }
 
 /* contact */
