--- a/style.css
+++ b/style.css
@@ -59,6 +59,18 @@ hr.aboutme{
   width:650px;
   padding-left:100px;
 }
+.box1 h2{
+  font-size: 50px;
+  text-align:center;
+  padding-bottom:0px;
+}
+.box1 p{
+  line-height:40px;
+  text-align:center;
+  font-size: 40px;
+padding-left: 70px;
+  padding-right:70px;
+}
 .box2{
   position:absolute;
   display:flex;
