--- a/style.css
+++ b/style.css
@@ -42,57 +42,78 @@ nav a:hover {
 }
 
 /* project */
+div.items {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
 
+div.items:hover {
+  border: 1px solid #777;
+}
+div.item-name {
+  font-size: px;
+}
+div.items img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
 
 /* about me */
-.box1{
-  position:absolute;
-  display:flex;
-  padding-top:30px;
+.box1 {
+  position: absolute;
+  display: flex;
+  padding-top: 30px;
 }
-.box1 img{
-  height:650px;
-  width:650px;
-  padding-left:100px;
+.box1 img {
+  height: 650px;
+  width: 650px;
+  padding-left: 100px;
 }
-.box1 h2{
+.box1 h2 {
   font-size: 65px;
-  text-align:center;
-  padding-bottom:0px;
+  text-align: center;
+  padding-bottom: 0px;
 }
-.box1 p{
-  line-height:45px;
-  text-align:center;
+.box1 p {
+  line-height: 45px;
+  text-align: center;
   font-size: 30px;
-padding-left: 70px;
-  padding-right:70px;
+  padding-left: 70px;
+  padding-right: 70px;
 }
-.box2{
-  position:absolute;
-  display:flex;
-  padding-top:750px;
+.box2 {
+  position: absolute;
+  display: flex;
+  padding-top: 750px;
 }
-.box2 img{
-  height:600px;
-  width:750px;
-  padding-right:100px;
+.box2 img {
+  height: 600px;
+  width: 750px;
+  padding-right: 100px;
 }
-.box2 h2{
+.box2 h2 {
   font-size: 65px;
-  text-align:center;
-  padding-bottom:0px;
+  text-align: center;
+  padding-bottom: 0px;
 }
-.box2 p{
-  line-height:45px;
-  text-align:center;
+.box2 p {
+  line-height: 45px;
+  text-align: center;
   font-size: 30px;
-padding-left: 70px;
-  padding-right:70px;
+  padding-left: 70px;
+  padding-right: 70px;
 }
 /* contact */
-a.info{
-    border: 2px;
-  border:double;
+a.info {
+  border: 2px;
+  border: double;
 }
 .info {
   margin: 30px;
@@ -109,7 +130,7 @@ a.info{
   color: white;
 }
 main.contactpage {
-font-family: 'Abel',sans-serif;
+  font-family: "Abel", sans-serif;
 }
 h1.contact-page {
   font-size: 85px;
