👗🌘 Checkpoint ./style.css:33818363/39 ./project.html:33818363/33

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav a:hover {
 div.items {
   margin: 15px;
   padding: 25px;
-  border: 1px solid #ccc;
+  border: 5px solid black;
   float: left;
   width: 180px;
 }
