--- a/style.css
+++ b/style.css
@@ -61,7 +61,9 @@ nav a:hover {
 
 
 /* project */
-div.items {
+
+/*ps*/
+div.ps {
   margin: 15px;
   padding: 25px;
   border: 5px solid black;
@@ -69,25 +71,100 @@ div.items {
   width: 180px;
 }
 
-div. items:hover {
+div.ps:hover {
   border: 1px solid #777;
 }
-div. -name {
+div.ps-name {
   font-size: 40px;
   text-align:center;
 }
-div. items img {
+div.ps img {
   width: 100%;
   height: auto;
 }
 
-div. desc {
+div.psdesc {
   padding: 15px;
   text-align: center;
 }
 
+/*xbox*/
+div.xbox {
+  margin: 15px;
+  padding: 25px;
+  border: 5px solid black;
+  float: left;
+  width: 180px;
+}
 
+div.xbox:hover {
+  border: 1px solid #777;
+}
+div.xbox-name {
+  font-size: 40px;
+  text-align:center;
+}
+div.xbox img {
+  width: 100%;
+  height: auto;
+}
 
+div.xboxdesc {
+  padding: 15px;
+  text-align: center;
+}
+
+/*games*/
+div.games {
+  margin: 15px;
+  padding: 25px;
+  border: 5px solid black;
+  float: left;
+  width: 180px;
+}
+
+div.games:hover {
+  border: 1px solid #777;
+}
+div.games-name {
+  font-size: 40px;
+  text-align:center;
+}
+div.games img {
+  width: 100%;
+  height: auto;
+}
+
+div.gamesdesc {
+  padding: 15px;
+  text-align: center;
+}
+
+/*other*/
+div.other {
+  margin: 15px;
+  padding: 25px;
+  border: 5px solid black;
+  float: left;
+  width: 180px;
+}
+
+div.other:hover {
+  border: 1px solid #777;
+}
+div.other-name {
+  font-size: 40px;
+  text-align:center;
+}
+div.other img {
+  width: 100%;
+  height: auto;
+}
+
+div.otherdesc {
+  padding: 15px;
+  text-align: center;
+}
 
 
 
