--- a/style.css
+++ b/style.css
@@ -41,26 +41,33 @@ nav a:hover {
   color: white;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* project */
+
+/*ps*/
+div.pc {
+  margin: 15px;
+  padding: 25px;
+  border: 5px solid black;
+  float: left;
+  width: 180px;
+}
+
+div.pc:hover {
+  border: 1px solid #777;
+}
+div.pc-name {
+  font-size: 40px;
+  text-align: center;
+}
+div.pc img {
+  width: 100%;
+  height: auto;
+}
+
+div.pcdesc {
+  padding: 15px;
+  text-align: center;
+}
 
 /*ps*/
 div.ps {
@@ -76,7 +83,7 @@ div.ps:hover {
 }
 div.ps-name {
   font-size: 40px;
-  text-align:center;
+  text-align: center;
 }
 div.ps img {
   width: 100%;
@@ -102,7 +109,7 @@ div.xbox:hover {
 }
 div.xbox-name {
   font-size: 40px;
-  text-align:center;
+  text-align: center;
 }
 div.xbox img {
   width: 100%;
@@ -128,7 +135,7 @@ div.games:hover {
 }
 div.games-name {
   font-size: 40px;
-  text-align:center;
+  text-align: center;
 }
 div.games img {
   width: 100%;
@@ -154,7 +161,7 @@ div.other:hover {
 }
 div.other-name {
   font-size: 40px;
-  text-align:center;
+  text-align: center;
 }
 div.other img {
   width: 100%;
@@ -165,14 +172,6 @@ div.otherdesc {
   padding: 15px;
   text-align: center;
 }
-
-
-
-
-
-
-
-
 
 /* about me */
 .box1 {
@@ -220,39 +219,6 @@ div.otherdesc {
   padding-right: 70px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* contact */
 a.info {
   border: 2px;
@@ -289,20 +255,6 @@ img.contact-page {
   padding-bottom: 40px;
   display: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* message */
 label.message {
