🎀🍱 Checkpoint ./style.css:33818363/19

--- a/style.css
+++ b/style.css
@@ -359,7 +359,9 @@ footer{
 .footer-distributed .footer-left{
 	width: 35%;
 }
-.footer-distributed .footer-company-name{}
+.footer-distributed .footer-company-name{
+  color: white;
+}
 
 
 /* Footer links */
