🔔🖼 Checkpoint ./index.html:33818363/618 ./style.css:33818363/21 ./.glitch-assets:33818363/967

--- a/style.css
+++ b/style.css
@@ -345,7 +345,7 @@ footer{
     padding-top: 50px;
 }
 .footer-distributed{
-	background: black;
+	background: dodgerblue;
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
