--- a/style.css
+++ b/style.css
@@ -120,15 +120,15 @@ nav a:hover {
 /*pc*/
 div.pc {
   margin: 15px;
-  padding: 25px;
+  padding: 15px;
   border: 5px solid black;
   float: left;
-  width: 180px;
+  width: 350px;
   margin:20px;
 }
 
 div.pc:hover {
-  border: 1px solid #777;
+  border: 5px solid darkcyan;
 }
 div.pc-name {
   font-size: 40px;
