--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ nav a:hover {
 
 
 .container {
-    width: 800px;
+    width: 1000px;
     margin: auto;
 }
 #first {
@@ -119,19 +119,19 @@ nav a:hover {
 
 /*pc*/
 div.pc {
-
-  margin: 25px;
-  padding: 10px;
+  padding: 20px;
   border: 5px solid black;
   float: left;
   width: 350px;
-  margin:20px;
+  margin:35px;
+
 }
+
 
 div.pc:hover {
   border: 5px solid MediumSpringGreen;
 }
-div.pc-name {
+div.pc-price {
   font-size: 40px;
   text-align: center;
 }
@@ -157,7 +157,7 @@ div.ps {
 div.ps:hover {
   border: 1px solid #777;
 }
-div.ps-name {
+div.ps-price {
   font-size: 40px;
   text-align: center;
 }
@@ -183,7 +183,7 @@ div.xbox {
 div.xbox:hover {
   border: 1px solid #777;
 }
-div.xbox-name {
+div.xbox-price {
   font-size: 40px;
   text-align: center;
 }
@@ -209,7 +209,7 @@ div.games {
 div.games:hover {
   border: 1px solid #777;
 }
-div.games-name {
+div.games-price {
   font-size: 40px;
   text-align: center;
 }
