--- a/style.css
+++ b/style.css
@@ -62,15 +62,15 @@ nav a:hover {
     margin: auto;
 }
 #first {
-    width: 944px;
+    width: 940px;
     float: left;
-    height: 400px;
+    height: 1000px;
     background-color: blue;
 }
 #second {
     width: 940px;
     float: left;
-    height: 400px;
+    height: 1000px;
     background-color: green;
     color: white;
 }
@@ -95,8 +95,9 @@ nav a:hover {
 
 
 .title-pc{
-  font-size:60px;
+  font-size:70px;
   color:blue;
+  text-align:center;
 }
 
 
@@ -150,15 +151,15 @@ div.pcdesc {
 
 
 div.ps {
-  margin: 15px;
+  margin: 30px;
   padding: 25px;
   border: 5px solid black;
   float: left;
-  width: 180px;
+  width: 350px;
 }
 
 div.ps:hover {
-  border: 1px solid #777;
+  border: 5px solid MediumSpringGreen;
 }
 div.ps-price {
   font-size: 40px;
@@ -174,6 +175,7 @@ div.psdesc {
   text-align: center;
 }
 #first h1{
+  font-size:60px;
   text-align:center;
 }
 
@@ -259,7 +261,7 @@ div.otherdesc {
   padding: 15px;
   text-align: center;
 }
-#second2 h1{
+#second1 h1{
   text-align:center;
   }
 /* about me */
