--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav a:hover {
     margin: auto;
 }
 #first {
-    width: 940px;
+    width: 944px;
     float: left;
     height: 1000px;
     background-color: blue;
@@ -82,13 +82,13 @@ nav a:hover {
 #first1{
     width: 944px;
     float: left;
-    height: 400px;
+    height: 1000px;
     background-color: blue;
 }
 #second1{
     width: 940px;
     float: left;
-    height: 400px;
+    height: 1000px;
     background-color: green;
     color: white;
 }
@@ -151,11 +151,11 @@ div.pcdesc {
 
 
 div.ps {
-  margin: 30px;
+  margin: 15px;
   padding: 25px;
   border: 5px solid black;
-  float: left;
-  width: 350px;
+  float: right;
+  width: 320px;
 }
 
 div.ps:hover {
