--- a/style.css
+++ b/style.css
@@ -55,7 +55,53 @@ nav a:hover {
 
 
 
-container1
+.container1 {
+
+  width:1920px;
+  margin:auto;
+}
+#bs{
+ width: 944px;
+  float: left;
+  height: 1000px;
+  background-color:DarkTurquoise; 
+}
+
+#lp{
+  width: 944px;
+  float: left;
+  height: 1000px;
+  background-colorDarkTurquoise;
+}
+
+div.bs, div.lp{
+  margin: 25px;
+  padding: 25px;
+  border: 5px solid black;
+  float: left;
+  width: 800px;
+}
+
+div.bs:hover,div.lp:hover{
+  border: 5px solid deepskyblue;
+}
+div.bs-price, div.lp-price{
+  font-size: 40px;
+  text-align: center;
+}
+div.bs img, div.lp img{
+  width: 100%;
+  height: auto;
+}
+
+div.bsdesc , div.lpdesc{
+  padding: 15px;
+  text-align: center;
+}
+#bs h1, #lp h1{
+  font-size: 60px;
+  text-align: center;
+}
 
 /* project */
 
