--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1.fs {
 div.fs {
   margin: 25px;
   padding: 25px;
-  border: 5px solid black;
+  border: 10px solid black;
   float: center;
   width: 1770px;
 }
@@ -97,15 +97,12 @@ div.bs,
 div.lp {
   margin: 25px;
   padding: 25px;
-  border: 5px solid black;
+
   float: left;
   width: 805px;
 }
 
-div.bs:hover,
-div.lp:hover {
-  border: 5px solid deepskyblue;
-}
+
 div.bs-price,
 div.lp-price {
   font-size: 40px;
@@ -121,6 +118,7 @@ div.bsdesc,
 div.lpdesc {
   padding: 15px;
   text-align: center;
+  font-size:20px;
 }
 #bs h1,
 #lp h1 {
